fix property tags in popup being too small

--- a/styles/_popup.scss
+++ b/styles/_popup.scss
@@ -39,6 +39,8 @@
                 --tag-color: var(--color-text-dark-2);
 
                 background: #ffffffd1;
+                font-variant: unset;
+                height: auto;
             }
 
             .tag {
